-----2.9.0 -----
	* Support Mathieu functions via GSL
	* Added global settings for numbers
	* Support real scientific notation of axes label
-----2.8.2 -----
Bug fixes:
	* [CAS] fixed the regression introduced after the python2 backend was deprecated in Cantor
	* BUG 427190 - Fixed resetting parser error count on some platforms (Debian, Manjaro)
	* BUG 429110 - Support semicolon as function argument separator for locale with comma as decimal separator
	* BUG 429368 - Fix validation of custom model equation in fit dock
-----2.8.1 -----
	* [worksheet] allow to change the background color for axis labels (default: transparent)
	* [worksheet] allow to copy the plot cursor cordinates
	* [spreadsheet] better auto-detection of datetime format for values pasted in the spreadsheet
	* [live data] allow to add the timestamp column for all network live sources (TCP/UDP), not only for MQTT
	* [live data] better error handling and user notifications

Bug fixes:
	* Fix compiling with Cantor 20.08.X and X>0
	* Fix drawing lines between points of datetime data
	* Fix drawing axis tick label in color when in HTML mode
	* Fix size of dock widgets when changing between them
	* BUG 389920 - remove sub-window shadow remnants when closing the project
	* BUG 428029 - changing font of text label for newer Qt versions
	* BUG 428813 - full screen not restored (also fixed full screen on macOS)
	* BUG 428698 - Don't crash when doing drag&drop between different main windows
	* Fix missing settings dialog on macOS
	* Parser improvements (found in "Generate Function Values"):
		* Fix Crash using variable name of pre-defined functions as function ("sin()")
		* Allow variable names containing function names ("sina")
		* Correctly remove variables when changing name
		* Use application number locale
		* insert predefined functions with correct number of arguments

-----2.8 -----
	* Improved DateTime data support
	* Show the size of the members in the JSON file in the import file dialog